# GenAI-hackathon

./: 01_fetch_gdelt.py  02_build_clusters.py  03_generate_labels.py  04_prepare_dataset.py  05_finetune.py  06_evaluate.py  DESIGN.md  README.md  app.py  config.py  main.py  pyproject.toml
.claude/: settings.local.json
models/nk-risk-analyst/: README.md
models/nk-risk-analyst/checkpoint-50/: adapter_config.json
